--- a/about_us.html
+++ b/about_us.html
@@ -15,6 +15,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="./aboutus_styles.css">
+    <link rel="stylesheet" href="./adaptive_375.css">
 
 </head>
 
@@ -31,8 +32,9 @@
         <nav class="header__nav">
             <a href="index.html" class="header__nav-item transit">HOME</a>
             <a href="#" class="header__nav-item transit">ABOUT US</a>
-            <a href="#" class="header__nav-item transit">Create your plan</a>
+            <a href="./createaplan.html" class="header__nav-item transit">Create your plan</a>
         </nav>
+        <button class="header__menu-btn"></button>
 
 
     </header>
@@ -164,7 +166,7 @@
             <nav class="footer__nav-item">
                 <a class="footer__nav-item_a transit" href="index.html">HOME</a>
                 <a class="footer__nav-item_a transit" href="#">ABOUT US</a>
-                <a class="footer__nav-item_a transit" href="#">Create your plan</a>
+                <a class="footer__nav-item_a transit" href="./createaplan.html">Create your plan</a>
             </nav>
         </div>
         <div class="footer__icon">
