--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./adaptive_375.css">
 
 </head>
 
@@ -31,9 +32,9 @@
         <nav class="header__nav">
             <a href="#" class="header__nav-item transit">HOME</a>
             <a href="about_us.html" class="header__nav-item transit">ABOUT US</a>
-            <a href="#" class="header__nav-item transit">Create your plan</a>
+            <a href="./createaplan.html" class="header__nav-item transit">Create your plan</a>
         </nav>
-
+<button class="header__menu-btn"></button>
 
     </header>
 
@@ -44,6 +45,7 @@
     <main>
 
         <section class="backround_conteiner">
+           
             <article class="backround_conteiner__content">
                 <h1 class="backround_conteiner__title">
                     Great coffee
@@ -111,14 +113,16 @@
 
         <section class="choose_conteiner">
 
-            <article class="choose_conteiner__text">
-                <h3 class="choose_conteiner__text-title">Why choose us?
-                </h3>
-                <p class="choose_conteiner__text-article">A large part of our role is choosing which particular coffees
-                    will be featured
-                    in our range. This means working closely with the best coffee growers to give
-                    you a more impactful experience on every level.</p>
-            </article>
+            <div class="choose_conteiner-background">
+                <article class="choose_conteiner__text">
+                    <h3 class="choose_conteiner__text-title">Why choose us?
+                    </h3>
+                    <p class="choose_conteiner__text-article">A large part of our role is choosing which particular coffees
+                        will be featured
+                        in our range. This means working closely with the best coffee growers to give
+                        you a more impactful experience on every level.</p>
+                </article>
+            </div>
 
             <div class="choose_conteiner__greenbox">
 
@@ -187,7 +191,7 @@
                 <article class="works_conteiner__items-text">
 
                     <h3 class="works_conteiner__items-text_number">01</h3>
-                    <div class="works_conteiner__items-text_article">Pick your <br>coffee
+                    <div class="works_conteiner__items-text_article">Pick your coffee
                     </div>
 
                     <p class="works_conteiner__items-text_info">Select from our evolving range of artisan coffees. Our
@@ -199,7 +203,7 @@
                 <article class="works_conteiner__items-text">
 
                     <h3 class="works_conteiner__items-text_number">02</h3>
-                    <div class="works_conteiner__items-text_article">Choose the <br>frequency
+                    <div class="works_conteiner__items-text_article">Choose the frequency
                     </div>
 
                     <p class="works_conteiner__items-text_info">Customize your order frequency, quantity, even your
@@ -211,7 +215,7 @@
                 <article class="works_conteiner__items-text">
 
                     <h3 class="works_conteiner__items-text_number">03</h3>
-                    <div class="works_conteiner__items-text_article">Receive and <br>enjoy!
+                    <div class="works_conteiner__items-text_article">Receive and enjoy!
                     </div>
 
                     <p class="works_conteiner__items-text_info">We ship your package within 48 hours, freshly roasted.
@@ -254,7 +258,7 @@
             <nav class="footer__nav-item">
                 <a class="footer__nav-item_a transit" href="#">HOME</a>
                 <a class="footer__nav-item_a transit" href="about_us.html">ABOUT US</a>
-                <a class="footer__nav-item_a transit" href="#">Create your plan</a>
+                <a class="footer__nav-item_a transit" href="./createaplan.html">Create your plan</a>
             </nav>
         </div>
         <div class="footer__icon">
